added: /home with greetings by param, textarea on teachers

--- a/src/main/resources/static/teachers.html
+++ b/src/main/resources/static/teachers.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/general.css" rel="stylesheet">
+    <link href="css/teachers.css" rel="stylesheet">
     <script src="js/bootstrap.bundle.min.js">
     </script>
     <title>Teachers</title>
@@ -58,7 +59,7 @@
                 </div>
               </div>
               <div class="col-12">
-                <button class="btn btn-primary" type="submit">Submit form</button>
+                <button class="btn btn-primary" type="submit">Переглянути</button>
               </div>
             </form>
           </div>
@@ -103,6 +104,8 @@
     </div>
   </div>
 </div>
+<textarea class="textarea container p-4 my-3 "></textarea>
+
     </main>
     <footer></footer>
   </body>
