added: frontend mvp

--- a/src/main/resources/static/about.html
+++ b/src/main/resources/static/about.html
@@ -11,11 +11,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>About author page</h1>
-    <h2>Ivan Savelyev production</h2>
+    <h1>About author page:</h1>
+ 
     <div class="container p-5 my-5 bg-primary text-white">
-      <h1>Сторінка була створена </h1>
-      <p>Для демонстрації дипломної роботи.</p>
+      <h1>Сторінка була створена </h1>      
+      <h2>
+          <p>Для демонстрації дипломної роботи.</p>
+          <p>Виконав: студент групи 501-Бз, Савельєв Іван</p>
+        </h2>
     </div>
   </div>
 </body>
