--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>ProgOrient</title>
+  <title>IPZBase</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -13,6 +12,10 @@
     .navbar-brand {
       font-size: xx-large;
     }
+    #index_carousel{
+      height: 32rem;
+    }
+
   </style>
 </head>
 
@@ -47,15 +50,17 @@
     <h2>Вітаємо!</h2>
     <h5>На платформі навчального середовища НАУ.</h5>
     <h5>Для початку роботи пройдіть процесс реєстрації</h5>
-    <!-- Carousel -->
-    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <!-- Carousel -->
+    <div class="container">
+    <div id="index_carousel" class="carousel slide" data-bs-ride="carousel">
 
-      <!-- Indicators/dots -->
+      <!-- Indicators/dots 
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
         <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
         <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
       </div>
+      -->
 
       <!-- The slideshow/carousel -->
       <div class="carousel-inner">
@@ -63,21 +68,24 @@
           <img src="img/way_1.jpg" alt="Los Angeles" class="d-block" style="width:100%">
         </div>
         <div class="carousel-item">
-          <img src="img/way_2.webp" alt="Chicago" class="d-block" style="width:100%">
+          <img src="img/microchip-800x500_c.jpg" alt="Chicago" class="d-block" style="width:100%">
         </div>
         <div class="carousel-item">
-          <img src="img/way_3.jpg" alt="New York" class="d-block" style="width:100%">
+          <img src="img/way_1.jpg" alt="New York" class="d-block" style="width:100%">
         </div>
       </div>
 
-      <!-- Left and right controls/icons -->
+      <!-- Left and right controls/icons 
       <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
         <span class="carousel-control-prev-icon"></span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
         <span class="carousel-control-next-icon"></span>
       </button>
+      -->
     </div>
+  </div>
+  <!-- Carousel end -->
     <p>Випускники зможуть знайти тут необхыны знання, та перевырити свої схильності.</p>
     <p>Якщо ви студент перейдіть в розділ студентам </p>
     <p>Для викладачів, які бажають вдосконалити систему, внести зміни в надані тести, перейдіть в розділ Викладачам</p>
@@ -85,7 +93,7 @@
 
   </div>
   <footer class="fixed-bottom mt-auto p-4 bg-dark text-white text-center">
-    <p>Виконав студент групи 501-Бз Савельєв Іван</p>
+  
     <p id="footer_date"></p>
     <script>
       var d = new Date();
