--- a/src/main/resources/static/login_register.html
+++ b/src/main/resources/static/login_register.html
@@ -22,8 +22,7 @@
               <div class="card-body p-md-5">
                 <div class="row justify-content-center">
                   <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-
-                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Створити обліковий запис</p>
 
                     <form class="mx-1 mx-md-4">
 
@@ -31,7 +30,7 @@
                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
                           <input type="text" id="form3Example1c" class="form-control" />
-                          <label class="form-label" for="form3Example1c">Your Name</label>
+                          <label class="form-label" for="form3Example1c">Ім'я</label>
                         </div>
                       </div>
 
@@ -39,7 +38,7 @@
                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
                           <input type="email" id="form3Example3c" class="form-control" />
-                          <label class="form-label" for="form3Example3c">Your Email</label>
+                          <label class="form-label" for="form3Example3c">Email</label>
                         </div>
                       </div>
 
@@ -47,7 +46,7 @@
                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
                           <input type="password" id="form3Example4c" class="form-control" />
-                          <label class="form-label" for="form3Example4c">Password</label>
+                          <label class="form-label" for="form3Example4c">Пароль</label>
                         </div>
                       </div>
 
@@ -55,28 +54,24 @@
                         <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
                           <input type="password" id="form3Example4cd" class="form-control" />
-                          <label class="form-label" for="form3Example4cd">Repeat your password</label>
+                          <label class="form-label" for="form3Example4cd">Повторіть пароль</label>
                         </div>
                       </div>
 
                       <div class="form-check d-flex justify-content-center mb-5">
                         <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
                         <label class="form-check-label" for="form2Example3">
-                          I agree all statements in <a href="#!">Terms of service</a>
+                          Я погоджуюсь із <a href="#!">Правилами</a>
                         </label>
                       </div>
 
                       <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                        <button type="button" class="btn btn-primary btn-lg">Register</button>
+                        <a href="cabinet.html" type="button" class="btn btn-primary btn-lg " \>Зареєструватись</a>
                       </div>
-
                     </form>
-
                   </div>
                   <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
                     <img src="img/NAU.png" class="img-fluid" alt="Sample image">
-
                   </div>
                 </div>
               </div>
