--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -50,42 +50,11 @@
     <h2>Вітаємо!</h2>
     <h5>На платформі навчального середовища НАУ.</h5>
     <h5>Для початку роботи пройдіть процесс реєстрації</h5>
-        <!-- Carousel -->
-    <div class="container">
-    <div id="index_carousel" class="carousel slide" data-bs-ride="carousel">
-
-      <!-- Indicators/dots 
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-      </div>
-      -->
-
-      <!-- The slideshow/carousel -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/way_1.jpg" alt="Los Angeles" class="d-block" style="width:100%">
-        </div>
-        <div class="carousel-item">
-          <img src="img/microchip-800x500_c.jpg" alt="Chicago" class="d-block" style="width:100%">
-        </div>
-        <div class="carousel-item">
-          <img src="img/way_1.jpg" alt="New York" class="d-block" style="width:100%">
+      <div class="container">
+        <div class="row">
+          <img src="img/index_photo_NAU_-1200x713.jpg" alt="" >
         </div>
       </div>
-
-      <!-- Left and right controls/icons 
-      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
-      -->
-    </div>
-  </div>
-  <!-- Carousel end -->
     <p>Випускники зможуть знайти тут необхыны знання, та перевырити свої схильності.</p>
     <p>Якщо ви студент перейдіть в розділ студентам </p>
     <p>Для викладачів, які бажають вдосконалити систему, внести зміни в надані тести, перейдіть в розділ Викладачам</p>
