added: CRUD finished and works, test.http for req.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -52,10 +52,10 @@
     <h5>Для початку роботи пройдіть процесс реєстрації</h5>
       <div class="container">
         <div class="row">
-          <img src="img/index_photo_NAU_-1200x713.jpg" alt="" >
+          <img src="img/index_photo_NAU_-1200x713.jpg" width="900" height="500" >
         </div>
       </div>
-    <p>Випускники зможуть знайти тут необхыны знання, та перевырити свої схильності.</p>
+    <p>Випускники зможуть знайти тут необхідні знання, та перевырити свої схильності.</p>
     <p>Якщо ви студент перейдіть в розділ студентам </p>
     <p>Для викладачів, які бажають вдосконалити систему, внести зміни в надані тести, перейдіть в розділ Викладачам</p>
   </div>
