--- a/src/main/resources/static/students.html
+++ b/src/main/resources/static/students.html
@@ -77,8 +77,9 @@ ul, #myUL {
         </div>
         <div class="row">
           <div class="col-xl-4 col-md-6 col-sm-12">
-            <div class="dscipline-squares border-info">
+            <div onclick="location.href='index.html';" style="cursor: pointer;" class="dscipline-squares border-info ">
               <h5 class="text-center p-2 bg-light border rounded-3">Комп’ютерна дискретна математика</h5>
+              
             </div>
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12">
@@ -98,7 +99,7 @@ ul, #myUL {
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12">
             <div class="dscipline-squares border-info">
-              <h5 class="text-center p-2 bg-light border rounded-3">Майстерня розробки програмного забезпечення</h5>
+              <h5 class="text-center p-2 bg-light border rounded-3">Майстерня розробки </h5>
             </div>
           </div>
           <div class="col-xl-4 col-md-6 col-sm-12">
