added: finished frontend

--- a/src/main/resources/static/all_articles.html
+++ b/src/main/resources/static/all_articles.html
@@ -8,12 +8,13 @@
         <link href="css/general.css" rel="stylesheet">
         <script src="js/bootstrap.bundle.min.js">
         </script>
-        <title>User cabinet</title>
+        <title>Articles</title>
       </head>
 <body>
-    <div class="container-fluid p-3 my-3">
+    <div class="container justify-content-center">
         <div class="row p-3 my-3 ">
-                <div class="card p-3 my-3" style="width: 18rem;">
+            <div class="column">
+                <div class="card p-3 my-3" style="width: 70rem;">
                     <img src="img/microchip-800x500_c.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Комп’ютерна дискретна математика</h5>
@@ -21,7 +22,7 @@
                         <a href="comp_descrete_math.html" class="btn btn-primary">До статті</a>
                     </div>
                 </div>
-                <div class="card p-3 my-3" style="width: 18rem;">
+                <div class="card p-3 my-3" style="width: 70rem;">
                     <img src="img/microchip-800x500_c.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Алгоритми та структури даних</h5>
@@ -29,6 +30,7 @@
                         <a href="algorithms_data_struct.html" class="btn btn-primary">До статті</a>
                     </div>
                 </div>
+            </div>
         </div>
     </div>
 </body>
