--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark rounded-3 gap-4 sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="img/NAU.png" alt="" width="120" height="100">
         </a>
       </div>
