--- a/src/main/resources/static/teachers.html
+++ b/src/main/resources/static/teachers.html
@@ -21,45 +21,36 @@
             <p>Переглянути результати конкретного студента</p>
             <form class="row g-3">
               <div class="col-md-4">
-                <label for="validationDefault01" class="form-label">First name</label>
-                <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+                <label for="validationDefault01" class="form-label">Ім'я</label>
+                <input type="text" class="form-control" id="validationDefault01" value="Ivan" required>
               </div>
               <div class="col-md-4">
-                <label for="validationDefault02" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="validationDefault02" value="Otto" required>
+                <label for="validationDefault02" class="form-label">Прізвище</label>
+                <input type="text" class="form-control" id="validationDefault02" value="Melnyk" required>
               </div>
               <div class="col-md-4">
-                <label for="validationDefaultUsername" class="form-label">Username</label>
+                <label for="validationDefaultUsername" class="form-label">Юзернейм</label>
                 <div class="input-group">
                   <span class="input-group-text" id="inputGroupPrepend2">@</span>
                   <input type="text" class="form-control" id="validationDefaultUsername"  aria-describedby="inputGroupPrepend2" required>
                 </div>
               </div>
               <div class="col-md-6">
-                <label for="validationDefault03" class="form-label">City</label>
+                <label for="validationDefault03" class="form-label">Місто</label>
                 <input type="text" class="form-control" id="validationDefault03" required>
               </div>
               <div class="col-md-3">
-                <label for="validationDefault04" class="form-label">State</label>
+                <label for="validationDefault04" class="form-label">Область</label>
                 <select class="form-select" id="validationDefault04" required>
-                  <option selected disabled value="">Choose...</option>
-                  <option>...</option>
+                  <option selected disabled value="">Обрати...</option>
+                  <option>Kyiv</option>
+                  <option>Lviv</option>
+                  <option>Dnypro</option>
                 </select>
               </div>
-              <div class="col-md-3">
-                <label for="validationDefault05" class="form-label">Zip</label>
-                <input type="text" class="form-control" id="validationDefault05" required>
-              </div>
               <div class="col-12">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                  <label class="form-check-label" for="invalidCheck2">
-                    Agree to terms and conditions
-                  </label>
-                </div>
-              </div>
-              <div class="col-12">
-                <button class="btn btn-primary" type="submit">Переглянути</button>
+                <button class="btn btn-primary" type="submit">Переглянути студента</button>
+                
               </div>
             </form>
           </div>
@@ -68,6 +59,7 @@
 
 <div class="container mt-3">
   <h2>Поточні результати студентів</h2>
+  <button class="btn btn-primary" type="submit">Всі студенти</button>
   <p>результати:</p>            
   <table class="table">
     <thead>
